Добавлена секция hero

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
                 <li><a href="javascript:void(0);">Contact</a></li>
               </ul>
             </nav>
-            <div class="header__logo logo"><a href="javascript:void(0);"><img src="images/general/logo.png" alt="logo pic"></a></div>
+            <div class="header__banner banner"><a href="javascript:void(0);"><img src="images/general/logo.png" alt="logo pic"></a></div>
             <div class="header__social social">
               <ul>
                 <li><a class="social__bh" href="javascript:void(0)"></a></li>
@@ -34,6 +34,19 @@
           </div>
         </div>
       </header>
+      <section class="sect hero">
+        <div class="container">
+          <div class="hero__row">
+            <div class="hero__col">
+              <div class="hero__cont">
+                <div class="hero__desc">
+                  <h1 class="hero__title">Free portfolio template</h1><span>for photographers</span>
+                </div><a class="hero__btn btn btn_color_golden" href="javascript:void(0);">Discover</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- main content end-->
     <script src="common.min.js"></script>
