Добавлена секция contact

--- a/public/index.html
+++ b/public/index.html
@@ -100,6 +100,28 @@
           </div>
         </div>
       </section>
+      <section class="sect cont">
+        <div class="container">
+          <div class="cont__row">
+            <div class="cont__col">
+              <div class="cont__cont">
+                <h2 class="cont__title">Get in touch</h2>
+                <form class="form cont__form" action="">
+                  <div class="form__field">
+                    <label class="form__label" for="name-id"></label>
+                    <input class="form__input" type="text" name="name" placeholder="Your Name" id="name-id">
+                    <label class="form__label" for="email-id"></label>
+                    <input class="form__input form__input_type_no-border" type="text" name="email" placeholder="Email" id="email-id">
+                    <label class="form__label" for="message-id"></label>
+                    <textarea class="form__input" name="message" rows="8" placeholder="Message" id="message-id"></textarea>
+                  </div>
+                  <button class="form__btn form__btn_type_submit btn btn_color_golden" type="submit">Send</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- main content end-->
     <script src="common.min.js"></script>
