--- a/public/index.html
+++ b/public/index.html
@@ -122,6 +122,19 @@
           </div>
         </div>
       </section>
+      <footer class="footer">
+        <div class="container">
+          <h6 class="footer__title">Follow me on:</h6>
+          <div class="footer__social social">
+            <ul>
+              <li><a class="social__bh" href="javascript:void(0)"></a></li>
+              <li><a class="social__fb" href="javascript:void(0)"></a></li>
+              <li><a class="social__tw" href="javascript:void(0)"></a></li>
+              <li><a class="social__inst" href="javascript:void(0)"></a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
     </main>
     <!-- main content end-->
     <script src="common.min.js"></script>
