Добавлена секция recent

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,25 @@
           </div>
         </div>
       </section>
+      <section class="sect recent">
+        <div class="container">
+          <h2 class="recent__title">Recent works</h2>
+          <div class="recent__row">
+            <div class="recent__col recent__col_desktop_md">
+              <div class="recent__work"><img src="images/content/recent/img-1.png" alt="recent work pic"></div>
+            </div>
+            <div class="recent__col recent__col_desktop_sm">
+              <div class="recent__work"><img src="images/content/recent/img-2.png" alt="recent work pic"></div>
+              <div class="recent__work"><img src="images/content/recent/img-3.png" alt="recent work pic"></div>
+            </div>
+          </div>
+          <div class="recent__row">
+            <div class="recent__col">
+              <div class="recent__work"><img src="images/content/recent/img-4.png" alt="recent work pic"></div>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="sect coll">
         <div class="container">
           <div class="coll__row">
