Идеальный пиксель tablet

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,78 @@
           </div>
         </div>
       </section>
+      <section class="sect recent">
+        <div class="container">
+          <h2 class="recent__title">Recent works</h2>
+          <div class="recent__row">
+            <div class="recent__col recent__col_desktop_md">
+              <div class="recent__work"><img src="images/content/recent/img-1.png" alt="recent work pic"></div>
+            </div>
+            <div class="recent__col recent__col_desktop_sm">
+              <div class="recent__work"><img src="images/content/recent/img-2.png" alt="recent work pic"></div>
+              <div class="recent__work"><img src="images/content/recent/img-3.png" alt="recent work pic"></div>
+            </div>
+          </div>
+          <div class="recent__row">
+            <div class="recent__col">
+              <div class="recent__work"><img src="images/content/recent/img-4.png" alt="recent work pic"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="sect coll">
+        <div class="container">
+          <div class="coll__row">
+            <div class="coll__col">
+              <div class="coll__img"><img src="images/content/collection/img-1.png" alt="collection pic"></div>
+            </div>
+            <div class="coll__col">
+              <div class="coll__cont">
+                <div class="coll__desc">
+                  <h2>B&amp;W Collection</h2>
+                  <p>
+                     They were six beautiful children but the youngest was the prettiest of them all. 
+                    Her skin was as clear and delicate as a rose-leaf and her eyes as blue as the deepest sea. 
+                    But like all the others she had no feet and her body ended in a fish’s tail.
+                  </p>
+                </div><a class="coll__btn btn btn_color_golden" href="javascript:void(0);">More</a>
+              </div>
+            </div>
+          </div>
+          <div class="coll__row">
+            <div class="coll__col">
+              <div class="coll__cont">
+                <div class="coll__desc">
+                  <h2>Mother Earth</h2>
+                  <p>
+                    And racism will be dead, for variety will then be the great fact of Humanity, and not uniformity. 
+                    Mother Earth will finally have given birth not to merely a Terrestrian, but to a Galactic Empire.
+                  </p>
+                </div><a class="coll__btn btn btn_color_golden" href="javascript:void(0);">More</a>
+              </div>
+            </div>
+            <div class="coll__col">
+              <div class="coll__img"><img src="images/content/collection/img-2.png" alt="collection pic"></div>
+            </div>
+          </div>
+          <div class="coll__row">
+            <div class="coll__col">
+              <div class="coll__img"><img src="images/content/collection/img-3.png" alt="collection pic"></div>
+            </div>
+            <div class="coll__col">
+              <div class="coll__cont">
+                <div class="coll__desc">
+                  <h2>Portraits</h2>
+                  <p>
+                    'Yes, we went to school in the sea, though you mayn't believe it—' 'I never said I didn't!' interrupted Alice. 
+                    'You did,' said the Mock Turtle. 'Hold your tongue!' added the Gryphon, before Alice could speak again.
+                  </p>
+                </div><a class="coll__btn btn btn_color_golden" href="javascript:void(0);">More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="sect cont">
         <div class="container">
           <div class="cont__row">
